--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
     <%= link_to "sample app", '#', id: "logo" %>
     <nav>
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><%= link_to "Home",    '#' , :class => 'nav-link' %></li>
-        <li class="nav-item active"><%= link_to "Help",    '#' , :class => 'nav-link' %></li>
-        <li class="nav-item active"><%= link_to "Sign in", '#' , :class => 'nav-link' %></li>
+        <li class="nav-item active"><%= link_to "Home",    root_path, :class => 'nav-link' %></li>
+        <li class="nav-item active"><%= link_to "Help",    help_path, :class => 'nav-link' %></li>
+        <li class="nav-item active"><%= link_to "Sign in",  '#'     , :class => 'nav-link' %></li>
       </ul>
       </nav>
   </div>
