--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,31 @@
 <header class="navbar fixed-top navbar-expand navbar-dark bg-dark">
-  <div class="container">
-    <%= link_to "sample app", '#', id: "logo" %>
-    <nav>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><%= link_to "Home",    root_path, :class => 'nav-link' %></li>
-        <li class="nav-item active"><%= link_to "Help",    help_path, :class => 'nav-link' %></li>
-        <li class="nav-item active"><%= link_to "Sign in",  '#'     , :class => 'nav-link' %></li>
-      </ul>
+    <div class="container">
+      <%= link_to "sample app", root_path, id: "logo" %>
+      <nav>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"><%= link_to "Home",    root_path, :class => 'nav-link' %></li>
+          <li class="nav-item active"><%= link_to "Help",    help_path, :class => 'nav-link' %></li>
+          <% if signed_in? %>
+            <li class="nav-item active"><%= link_to "Users", '#' , :class => 'nav-link'%></li>
+            
+            <li id="fat-menu" class="dropdown float-right">
+              <a href="#" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right">
+                
+                <%= link_to "Profile", current_user, :class => 'dropdown-item' %>
+                <%= link_to "Settings", '#', :class => 'dropdown-item' %>
+                <div class="divider"></div>
+                  <%= link_to "Sign out", destroy_user_session_path, method: "delete", :class => 'dropdown-item' %>
+
+                </div>
+              </div>
+            </li>
+          <% else %>
+            <li class="nav-item active"><%= link_to "Sign in", new_user_session_path, :class => 'nav-link' %></li>
+          <% end %>
+        </ul>
       </nav>
-  </div>
+    </div>
 </header>
