--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,18 +7,15 @@
           <li class="nav-item active"><%= link_to "Help",    help_path, :class => 'nav-link' %></li>
           <% if signed_in? %>
             <li class="nav-item active"><%= link_to "Users", '#' , :class => 'nav-link'%></li>
-            
             <li id="fat-menu" class="dropdown float-right">
               <a href="#" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
               </a>
               <div class="dropdown-menu dropdown-menu-right">
-                
-                <%= link_to "Profile", current_user, :class => 'dropdown-item' %>
-                <%= link_to "Settings", '#', :class => 'dropdown-item' %>
+                <%= link_to "Profile",  current_user               , :class => 'dropdown-item' %>
+                <%= link_to "Settings", edit_user_registration_path, :class => 'dropdown-item' %>
                 <div class="divider"></div>
                   <%= link_to "Sign out", destroy_user_session_path, method: "delete", :class => 'dropdown-item' %>
-
                 </div>
               </div>
             </li>
