--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
           <li class="nav-item active"><%= link_to "Home",    root_path, :class => 'nav-link' %></li>
           <li class="nav-item active"><%= link_to "Help",    help_path, :class => 'nav-link' %></li>
           <% if signed_in? %>
-            <li class="nav-item active"><%= link_to "Users", '#' , :class => 'nav-link'%></li>
+            <li class="nav-item active"><%= link_to "Users", users_path, :class => 'nav-link'%></li>
             <li id="fat-menu" class="dropdown float-right">
               <a href="#" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
