--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,5 +1,8 @@
 <li>
   <span class="content"><%= micropost.content %></span>
+  
+    <%= image_tag micropost.picture.url if micropost.picture? %>
+
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
   </span>
