--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,26 +7,26 @@
 
         <%= render 'shared/error_messages', object: f.object %>
 
-        <div class="field">
-          <%= f.label :name, class: "control-label" %>
+        <div class="form-group">
+          <%= f.label :name, class: "col-form-label" %>
           <%= f.text_field :name, autofocus: true, class: "form-control" %>
         </div>
 
-        <div class="field">
-          <%= f.label :email, class: "control-label" %>
+        <div class="form-group">
+          <%= f.label :email, class: "col-form-label" %>
           <%= f.email_field :email, autofocus: true, class: "form-control" %>
         </div>
 
-        <div class="field">
-          <%= f.label :password, class: "control-label" %>
+        <div class="form-group">
+          <%= f.label :password, class: "col-form-label" %>
           <% if @validatable %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
           <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
         </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation, class: "control-label" %>
+        <div class="form-group">
+          <%= f.label :password_confirmation, class: "col-form-label" %>
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
         </div>
     </div>
