--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,14 +1,14 @@
 <%= form_for(@micropost, html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
-  <div class="field">
-    <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+  <div class="form-group">
+    <%= f.text_area :content, placeholder: "Compose new micropost...",class: "form-control" %>
   </div>
   <%= f.submit "Post", class: "btn btn-lg btn-primary" %>
 
 
-  <span class="picture">
-    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
-  </span>
+  <div class="form-group">
+    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png',class: "form-control-file" %>
+  </div>
   <script type="text/javascript">
   $('#micropost_picture').bind('change', function() {
     var size_in_megabytes = this.files[0].size/1024/1024;
