--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-lg-6 offset-lg-3">
 
         <%= render 'shared/error_messages', object: f.object %>
 
@@ -33,7 +33,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-3 col-md-offset-3">
+    <div class="col-lg-3 offset-lg-3">
         <div class="actions">
           <%= f.submit "Create my account", class: "btn btn-lg btn-primary" %>
         </div>
